force-app/main/default/objects/Contract__c/fields/International_Annual_Share__c.field-meta.xml
<CustomField>
    <fullName>International_Annual_Share__c</fullName>
    <label>Forecast QF Share (Int)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>