force-app/main/default/objects/Contract__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <defaultValue>&quot;CHA&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>