force-app/main/default/objects/Contract__c/fields/Legal_Approval__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approval__c</fullName>
    <inlineHelpText>Please use this to flag if Legal approval is required and to flag if the Legal team has approved or rejected the contract.</inlineHelpText>
    <label>Legal Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>