force-app/main/default/objects/Contract__c/fields/Legal_TC__c.field-meta.xml
<CustomField>
    <fullName>Legal_TC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal T&amp;Cs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>