force-app/main/default/objects/Contract__c/fields/Link_to_the_Sharepoint_document__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_Sharepoint_document__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link to the Sharepoint document</label>
    <type>Url</type>
</CustomField>