force-app/main/default/objects/Contract__c/fields/Linked_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Linked_Agreement__c</fullName>
    <description>Loyalty commercial field</description>
    <label>Linked Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>