force-app/main/default/objects/Contract__c/fields/Linked_Agreement_Details__c.field-meta.xml
<CustomField>
    <fullName>Linked_Agreement_Details__c</fullName>
    <description>Loyalty commercial field to be filled when Linked Agreement is selected as Yes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Linked Agreement Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>