force-app/main/default/objects/Contract__c/fields/Lock_system__c.field-meta.xml
<CustomField>
    <fullName>Lock_system__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To By Pass A Validation rule (Loyalty_End_Date_Lock )</description>
    <label>Lock(system)</label>
    <type>Checkbox</type>
</CustomField>