force-app/main/default/objects/Contract__c/fields/MCA_Routes_Annual_Share__c.field-meta.xml
<CustomField>
    <fullName>MCA_Routes_Annual_Share__c</fullName>
    <label>Forecast QF Share (MCA)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>