force-app/main/default/objects/Contract__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates whether the contract has been created in SFDC as part of Data Migration excercise</description>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>