force-app/main/default/objects/Contract__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <description>To be used under the &quot;Special Conditions&quot; section</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>