force-app/main/default/objects/Contract__c/fields/Override_Valid_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Valid_Until_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used when Deal Support would like to override the Valid Until Date</description>
    <inlineHelpText>QDM and Deal Optimisation Team only</inlineHelpText>
    <label>Date Override Ability</label>
    <type>Checkbox</type>
</CustomField>