force-app/main/default/objects/Contract__c/fields/Parent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>look up to the first contract created</description>
    <label>Parent Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Related Contract Versions</relationshipLabel>
    <relationshipName>Contracts_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>