force-app/main/default/objects/Contract__c/fields/Payment_Acknowledgement_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Acknowledgement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Full Payment date</label>
    <type>DateTime</type>
</CustomField>