force-app/main/default/objects/Contract__c/fields/Performance_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Performance_Bonus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used under the &quot;Special Conditions&quot; section</description>
    <label>Performance Bonus</label>
    <type>Checkbox</type>
</CustomField>