force-app/main/default/objects/Contract__c/fields/Point_to_Note__c.field-meta.xml
<CustomField>
    <fullName>Point_to_Note__c</fullName>
    <defaultValue>&quot;The Prism Detail info that is recently created in the Account will be picked up when generating the deal sheet.&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Point to Note</label>
    <type>TextArea</type>
</CustomField>