force-app/main/default/objects/Contract__c/fields/PreviousContract__c.field-meta.xml
<CustomField>
    <fullName>PreviousContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for Loyalty. Will hold the previous contract if this is a extension contract. All Corporate schmes attached to the prevous contracts will be reparented automatically on the previus contract end date.</description>
    <inlineHelpText>Holds the Previous contract Value, If this Contract is an Extention of any.</inlineHelpText>
    <label>Previous Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contracts &amp; Agreements</relationshipLabel>
    <relationshipName>Contracts_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>