force-app/main/default/objects/Contract__c/fields/Price_Per_Point__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Point__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>How much an individual point costs</inlineHelpText>
    <label>Price Per Point</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>