force-app/main/default/objects/Contract__c/fields/Program_Participation_Fee_excl_GST__c.field-meta.xml
<CustomField>
    <fullName>Program_Participation_Fee_excl_GST__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Additional cost to partner for signing up to a program</inlineHelpText>
    <label>Program Participation Fee (excl. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>