force-app/main/default/objects/Contract__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proposal Name</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>