force-app/main/default/objects/Contract__c/fields/Proposed_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Revenue_Amount__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Revenue that is expected as part of the points price, minimum commitment etc.</inlineHelpText>
    <label>Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>