force-app/main/default/objects/Contract__c/fields/Qantas_Annual_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Annual_Expenditure__c</fullName>
    <label>Forecast QF Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>