force-app/main/default/objects/Contract__c/fields/Qantas_Club_Discount__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Club_Discount__c</fullName>
    <inlineHelpText>Used to display if Qantas Club Discount was flagged at the Proposal level.</inlineHelpText>
    <label>Qantas Club Discount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>