force-app/main/default/objects/Contract__c/fields/Qantas_Club_Discount_Offer__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Club_Discount_Offer__c</fullName>
    <inlineHelpText>Used to display the Qantas Club Discount value selected at the Proposal level.</inlineHelpText>
    <label>Qantas Club Member Discount Offer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>22%</fullName>
            </value>
            <value>
                <fullName>23%</fullName>
            </value>
            <value>
                <fullName>29%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>35%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>