force-app/main/default/objects/Contract__c/fields/Qantas_Club_Join_Discount_Offer__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Club_Join_Discount_Offer__c</fullName>
    <inlineHelpText>Qantas Club joining fee / points discount offer</inlineHelpText>
    <label>Qantas Club Join Discount Offer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>6%</fullName>
            </value>
            <value>
                <fullName>7%</fullName>
            </value>
            <value>
                <fullName>14%</fullName>
            </value>
            <value>
                <fullName>21%</fullName>
            </value>
            <value>
                <fullName>38%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>