force-app/main/default/objects/Contract__c/fields/QEC_AA_Customer__c.field-meta.xml
<CustomField>
    <fullName>QEC_AA_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AA Customer</label>
    <type>Checkbox</type>
</CustomField>