force-app/main/default/objects/Contract__c/fields/QEC_Approval_Condition__c.field-meta.xml
<CustomField>
    <fullName>QEC_Approval_Condition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QEC Approval Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>