force-app/main/default/objects/Contract__c/fields/QEC_Distribution_Email__c.field-meta.xml
<CustomField>
    <fullName>QEC_Distribution_Email__c</fullName>
    <description>Email distribution field for Manage TMCPCC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Distribution Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>