force-app/main/default/objects/Contract__c/fields/QEC_JQ_Inclusion_City_Pairs__c.field-meta.xml
<CustomField>
    <fullName>QEC_JQ_Inclusion_City_Pairs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QEC JQ Inclusion City Pairs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>