force-app/main/default/objects/Contract__c/fields/QEC_Variation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QEC_Variation_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Variation Start Date</label>
    <type>Date</type>
</CustomField>