force-app/main/default/objects/Contract__c/fields/QF_EK_Network_Override__c.field-meta.xml
<CustomField>
    <fullName>QF_EK_Network_Override__c</fullName>
    <formula>Proposal__r.QL_QF_EK_Network_Override__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF-EK Network Override</label>
    <type>Checkbox</type>
</CustomField>