force-app/main/default/objects/Contract__c/fields/QL_Actual_Estimated_Dom_QF_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>QL_Actual_Estimated_Dom_QF_Market_Share__c</fullName>
    <description>Used to calculate Group Travel Discount CRM-5224</description>
    <inlineHelpText>(DO NOT USE) This is no longer offered)</inlineHelpText>
    <label>Actual/Estimated Dom QF Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>