force-app/main/default/objects/Contract__c/fields/QL_Contract_IsQFEKPresent__c.field-meta.xml
<CustomField>
    <fullName>QL_Contract_IsQFEKPresent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populate the IsQFEKPresent field value from Proposal Object CRM-5258</description>
    <label>IsQFEKPresent</label>
    <type>Checkbox</type>
</CustomField>