force-app/main/default/objects/Contract__c/fields/QL_Discount_Model__c.field-meta.xml
<CustomField>
    <fullName>QL_Discount_Model__c</fullName>
    <description>This field captures discount model value - tier 2 changes -CRM- 5209</description>
    <label>Discount Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Tiered</fullName>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>