force-app/main/default/objects/Contract__c/fields/QL_Effective_Tier__c.field-meta.xml
<CustomField>
    <fullName>QL_Effective_Tier__c</fullName>
    <description>Proposal 2-Tier changes CRM - 5209</description>
    <label>Effective Tier</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>QL_Discount_Model__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>