force-app/main/default/objects/Contract__c/fields/QL_Effective_Tier_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>QL_Effective_Tier_Change_Date__c</fullName>
    <description>Proposal 2-Tier changes CRM-5209</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Tier Change Date</label>
    <type>DateTime</type>
</CustomField>