force-app/main/default/objects/Contract__c/fields/QL_Forecast_MCA_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QL_Forecast_MCA_Revenue__c</fullName>
    <description>Captures the Forecast MCA Revenue value&apos;CRM - 5346&apos;</description>
    <inlineHelpText>Forecast QF+EK spend on MCA routes only</inlineHelpText>
    <label>Forecast MCA Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>