force-app/main/default/objects/Contract__c/fields/QL_Includes_JQ__c.field-meta.xml
<CustomField>
    <fullName>QL_Includes_JQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This filed is created to captures whether the contract is JQ included or not - 2 Tier Proposal Changes- CRM 5209</description>
    <label>Includes JQ</label>
    <type>Checkbox</type>
</CustomField>