force-app/main/default/objects/Contract__c/fields/QL_MalaysiaQFEKexists__c.field-meta.xml
<CustomField>
    <fullName>QL_MalaysiaQFEKexists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to enable if Malaysia JCD record consists of QF-EK in Contract Discount List as a part of CRM-5616.</description>
    <label>MalaysiaQFEKexists</label>
    <type>Checkbox</type>
</CustomField>