force-app/main/default/objects/Contract__c/fields/QMR_generated_by_gained_account_equals__c.field-meta.xml
<CustomField>
    <fullName>QMR_generated_by_gained_account_equals__c</fullName>
    <label>QMR generated by gained account equals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>