force-app/main/default/objects/Contract__c/fields/Quest_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Quest_Contract_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Quest Contract ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>