force-app/main/default/objects/Contract__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This relationship field used to generate contract from quote object</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Contracts &amp; Agreements</relationshipLabel>
    <relationshipName>Contracts_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>