force-app/main/default/objects/Contract__c/fields/Related_Account_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Name_f__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account Name</label>
    <type>Text</type>
</CustomField>