force-app/main/default/objects/Contract__c/fields/RoutesConditionsRouting_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>RoutesConditionsRouting_Other_Details__c</fullName>
    <description>To be used under the &quot;Special Conditions&quot; section</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please specify routes/ conditions/ routing and other details</inlineHelpText>
    <label>Special Conditions Details</label>
    <type>TextArea</type>
</CustomField>