force-app/main/default/objects/Contract__c/fields/Sales_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Start Date</label>
    <type>Date</type>
</CustomField>