force-app/main/default/objects/Contract__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <description>Loyalty commercial field</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date contract signed by partner</inlineHelpText>
    <label>Signed Date</label>
    <type>Date</type>
</CustomField>