force-app/main/default/objects/Contract__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>Loyalty commercial field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SLA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>