force-app/main/default/objects/Contract__c/fields/Special_Fare_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Special_Fare_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used under the &quot;Special Conditions&quot; section</description>
    <label>Special Fare Conditions</label>
    <type>Checkbox</type>
</CustomField>