force-app/main/default/objects/Contract__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <inlineHelpText>Used to display the selection made at the proposal level. This cannot be updated at the Contract level. Some examples include route specific offers, any additional fare classes, incentive/volume/token deals, waivers, special conditions on PFT fares etc.</inlineHelpText>
    <label>Require Additional Changes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>