force-app/main/default/objects/Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approval Required - Internal</fullName>
            </value>
            <value>
                <fullName>Signature Required by Customer</fullName>
            </value>
            <value>
                <fullName>Signed by Customer</fullName>
            </value>
            <value>
                <fullName>Rejected - Customer</fullName>
            </value>
            <value>
                <fullName>Rejected – Legal</fullName>
            </value>
            <value>
                <fullName>Approval Required – Legal</fullName>
            </value>
            <value>
                <fullName>Rejected - Internal</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Superceded</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>