force-app/main/default/objects/Contract__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Termination Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>