force-app/main/default/objects/Contract__c/fields/Ticketing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ticketing Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>