force-app/main/default/objects/Contract__c/fields/Ticketing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ticketing Start Date</label>
    <type>Date</type>
</CustomField>