force-app/main/default/objects/Contract__c/fields/TILTA_Approved__c.field-meta.xml
<CustomField>
    <fullName>TILTA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Check when approved by TILTA</inlineHelpText>
    <label>TILTA Approved</label>
    <type>Checkbox</type>
</CustomField>