force-app/main/default/objects/Contract__c/fields/TILTA_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>TILTA_Contract_Number__c</fullName>
    <description>Loyalty commercial field</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Number issued from TILTA for tracking of the contract through the process</inlineHelpText>
    <label>TILTA Contract Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>