force-app/main/default/objects/Contract__c/fields/TMC_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>TMC_Billing_Address__c</fullName>
    <formula>IF(ISBLANK(TMC_Code__r.Primary_Account__r.BillingStreet),&quot;&quot;, (TMC_Code__r.Primary_Account__r.BillingStreet &amp;&quot;, &quot; ) ) 
&amp; IF(ISBLANK(TMC_Code__r.Primary_Account__r.BillingCity),&quot;&quot;, (TMC_Code__r.Primary_Account__r.BillingCity&amp;&quot;, &quot;) ) 
&amp; IF(ISBLANK(TMC_Code__r.Primary_Account__r.BillingState),&quot;&quot;, (TMC_Code__r.Primary_Account__r.BillingState &amp;&quot;, &quot;) ) 
&amp; IF(ISBLANK(TMC_Code__r.Primary_Account__r.BillingPostalCode),&quot;&quot;, (TMC_Code__r.Primary_Account__r.BillingPostalCode&amp;&quot;, &quot;) ) 
&amp;TMC_Code__r.Primary_Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMC Billing Address</label>
    <type>Text</type>
</CustomField>