force-app/main/default/objects/Contract__c/fields/TMC_Code__c.field-meta.xml
<CustomField>
    <fullName>TMC_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please use this to select the customer&apos;s TMC which is relevant for this proposal/contract. For the required TMC to appear here for selection, it must be associated with the Customer Account.</inlineHelpText>
    <label>TMC Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Relation__c.Related_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Account_Relation__c.Relationship__c</field>
            <operation>equals</operation>
            <value>Travel Manager Of</value>
        </filterItems>
        <filterItems>
            <field>Account_Relation__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account_Relation__c</referenceTo>
    <relationshipLabel>Contract &amp; Agreements</relationshipLabel>
    <relationshipName>Contract_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>