force-app/main/default/objects/Contract__c/fields/TMC_Email__c.field-meta.xml
<CustomField>
    <fullName>TMC_Email__c</fullName>
    <formula>TMC_Code__r.Primary_Account__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMC Email</label>
    <type>Text</type>
</CustomField>