force-app/main/default/objects/Contract__c/fields/TMC_IATA__c.field-meta.xml
<CustomField>
    <fullName>TMC_IATA__c</fullName>
    <formula>TMC_Code__r.Primary_Account__r.IATA_Number__c</formula>
    <label>TMC IATA</label>
    <type>Text</type>
</CustomField>