force-app/main/default/objects/Contract__c/fields/Token_Deal__c.field-meta.xml
<CustomField>
    <fullName>Token_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used under the &quot;Special Conditions&quot; section</description>
    <label>No Revenue &amp; Share Target</label>
    <type>Checkbox</type>
</CustomField>