force-app/main/default/objects/Contract__c/fields/Total_Charter_Amount_INCL_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Charter_Amount_INCL_GST__c</fullName>
    <label>Total Charter Amount [INCL GST]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>