force-app/main/default/objects/Contract__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <formula>Actual_Revenue_Americas__c  +  Actual_Revenue_Middle_East__c  +  Actual_Revenue_NE_Asia__c  +  Actual_Revenue_SE_Asia__c  +  Actual_Revenue_South_America__c  +  Actual_Revenue_SWP__c  +  Actual_Revenue_UK_Eur__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>