force-app/main/default/objects/Contract__c/fields/Travel_Benefit_First_Instalment_Value__c.field-meta.xml
<CustomField>
    <fullName>Travel_Benefit_First_Instalment_Value__c</fullName>
    <label>Travel Benefit-First Instalment Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>