force-app/main/default/objects/Contract__c/fields/Travel_Benefit_Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Travel_Benefit_Fixed_Amount__c</fullName>
    <label>Travel Benefit Fixed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>