force-app/main/default/objects/Contract__c/fields/Travel_Benefit_Second_Instalment_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_Benefit_Second_Instalment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Travel Benefit-Second Instalment Date</label>
    <type>Date</type>
</CustomField>