force-app/main/default/objects/Contract__c/fields/Travel_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Travel_Benefits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Benefits</label>
    <type>Checkbox</type>
</CustomField>