force-app/main/default/objects/Contract__c/fields/Travel_Fund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Travel_Fund_Amount__c</fullName>
    <label>Travel Fund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>